# dynamodb-persistent-lock

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: publish_pypi.yaml
src/dynamodb_persistent_lock/: __init__.py  dynamodb_persistent_lock.py
src/dynamodb_persistent_lock/tests/: __init__.py  test_dynamodb_persistent_lock.py
