[build-system]
requires = [
  "setuptools >= 75.3.0"
]

[project]
description = "DynamoDB Persistent Lock"
name = "dynamodb-persistent-lock"
license = {text = "Apache-2.0 AND MIT"}
authors = [
  {name = "Tim Heiko", email = "175552092+timheiko@users.noreply.github.com"},
]
requires-python = ">= 3.14"
readme = "README.rst"
dynamic = [
  "version",
]
dependencies = [
  "build",
  "boto3",
]

[project.optional-dependencies]
dev = [
  "black",
  "dynamodb-local",
  "isort",
  "pytest",
  "pytest-asyncio",
]


[tool.setuptools.dynamic]
version = {attr = "dynamodb_persistent_lock.__version__"}

[project.urls]
"Source" = "https://github.com/timheiko/dynamodb-persistent-lock"
"Bug Tracker" = "https://github.com/timheiko/dynamodb-persistent-lock/issues"

[tool.isort]
profile = "black"
